crates/auryn-compiler/src/auryn/snapshots/auryn_compiler__auryn__parser__tests__types.snap
---
source: crates/auryn-compiler/src/auryn/parser.rs
expression: "verify(r#\"\n            type Foo = []Bar[I32]\n            \"#)"
---
syntax_tree:
0..47 Root
|0..47 File
||Newline `\n`
||Whitespace `            `
||13..34 Item
|||13..34 ItemKind
||||13..34 TypeAlias
|||||KeywordType `type`
|||||Whitespace ` `
|||||Identifier `Foo`
|||||Whitespace ` `
|||||Equal `=`
|||||Whitespace ` `
|||||24..34 Type
||||||24..34 ArrayType
|||||||BracketOpen `[`
|||||||BracketClose `]`
|||||||26..34 Type
||||||||26..34 TypeRef
|||||||||26..29 TypePath
||||||||||Identifier `Bar`
|||||||||29..34 TypeArguments
||||||||||BracketOpen `[`
||||||||||30..33 Type
|||||||||||30..33 TypeRef
||||||||||||30..33 TypePath
|||||||||||||Identifier `I32`
||||||||||BracketClose `]`
||Newline `\n`
||Whitespace `            `

diagnostics:
