crates/auryn-compiler/src/auryn/snapshots/auryn_compiler__auryn__parser__tests__variable_update-3.snap
---
source: crates/auryn-compiler/src/auryn/parser.rs
expression: "verify_block(\"print(test).a *= 3\")"
---
syntax_tree:
0..18 Root
|0..18 Block
||0..18 Statement
|||0..18 VariableUpdate
||||0..14 Path
|||||0..14 Expression
||||||0..14 PostfixOperation
|||||||0..11 PostfixOperation
||||||||0..5 Value
|||||||||0..5 Ident
||||||||||Identifier `print`
||||||||5..11 PostfixOperator
|||||||||5..11 ArgumentList
||||||||||ParensOpen `(`
||||||||||6..10 Expression
|||||||||||6..10 Value
||||||||||||6..10 Ident
|||||||||||||Identifier `test`
||||||||||ParensClose `)`
|||||||11..14 PostfixOperator
||||||||11..14 Accessor
|||||||||Dot `.`
|||||||||Identifier `a`
|||||||||Whitespace ` `
||||TimesAssign `*=`
||||Whitespace ` `
||||17..18 Expression
|||||17..18 Value
||||||17..18 NumberLiteral
|||||||NumberLiteral `3`

diagnostics:
